[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Collectible.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Tile-Stone.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Orange.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Frank_Idle.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Background.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Collectible.wav" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=7]
friction = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.5, 49.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 43, 59.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 299.803, 66.7121 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 120 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20, 20 )

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511.229, 301.244 )
rotation = -3.14159
scale = Vector2( 41.6592, 15.3285 )
texture = ExtResource( 7 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 141, 382 )
mode = 2
physics_material_override = SubResource( 7 )
gravity_scale = 40.0
script = ExtResource( 3 )

[node name="jumpSound" type="AudioStreamPlayer2D" parent="RigidBody2D"]
position = Vector2( -141, -382 )
stream = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( 74, 54 )
scale = Vector2( 0.56, 1 )
z_index = 2
shape = SubResource( 1 )

[node name="BulletSpawnPoint" type="Position2D" parent="RigidBody2D"]
position = Vector2( 130, 50 )

[node name="Position2D" type="Position2D" parent="RigidBody2D"]
position = Vector2( 75, 54 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" type="Sprite" parent="RigidBody2D/Position2D"]
position = Vector2( -1, 0 )
z_index = 1
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="RigidBody2D"]
position = Vector2( 41, 85 )
scale = Vector2( 0.435918, 0.210769 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( 76, 58.75 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="RigidBody2D"]
position = Vector2( -141, -382 )
anchor_mode = 0
current = true
smoothing_enabled = true
smoothing_speed = 16.0

[node name="Tilemap" type="StaticBody2D" parent="."]
position = Vector2( -9, 220 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tilemap"]
position = Vector2( 369.5, 339.988 )
scale = Vector2( 1.19912, 0.591403 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( -267.278, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( -200.563, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( -133.847, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( -67.1322, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( -0.416809, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( 66.2986, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite7" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( 133.014, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite8" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( 199.729, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="Sprite9" type="Sprite" parent="Tilemap/CollisionShape2D"]
position = Vector2( 266.445, 0.0197144 )
scale = Vector2( 0.833942, 1.69089 )
texture = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tilemap"]
position = Vector2( 609, 260 )
shape = SubResource( 4 )

[node name="Sprite10" type="Sprite" parent="Tilemap/CollisionShape2D2"]
position = Vector2( -80.0001, -9.15527e-05 )
scale = Vector2( 0.999997, 0.999997 )
texture = ExtResource( 4 )

[node name="Sprite11" type="Sprite" parent="Tilemap/CollisionShape2D2"]
position = Vector2( -0.000854492, -9.15527e-05 )
scale = Vector2( 0.999997, 0.999997 )
texture = ExtResource( 4 )

[node name="Sprite12" type="Sprite" parent="Tilemap/CollisionShape2D2"]
position = Vector2( 79.9996, -9.15527e-05 )
scale = Vector2( 0.999997, 0.999997 )
texture = ExtResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Tilemap"]
position = Vector2( 993, 260 )
shape = SubResource( 5 )

[node name="Sprite13" type="Sprite" parent="Tilemap/CollisionShape2D3"]
position = Vector2( 0, 6.10352e-05 )
scale = Vector2( 0.999997, 0.999997 )
texture = ExtResource( 4 )

[node name="Sprite14" type="Sprite" parent="Tilemap/CollisionShape2D3"]
position = Vector2( 0, -80 )
scale = Vector2( 0.999997, 0.999997 )
texture = ExtResource( 4 )

[node name="Sprite15" type="Sprite" parent="Tilemap/CollisionShape2D3"]
position = Vector2( -0.000244141, 79.9999 )
scale = Vector2( 0.999997, 0.999997 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 364, 389 )
script = ExtResource( 2 )

[node name="delaysound" type="Timer" parent="Area2D"]
wait_time = 0.2
one_shot = true

[node name="collectibleSound" type="AudioStreamPlayer" parent="Area2D"]
stream = ExtResource( 8 )

[node name="Orange" type="Sprite" parent="Area2D"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 518, 307 )
script = ExtResource( 2 )

[node name="delaysound" type="Timer" parent="Area2D2"]
wait_time = 0.2
one_shot = true

[node name="collectibleSound" type="AudioStreamPlayer" parent="Area2D2"]
stream = ExtResource( 8 )

[node name="Orange" type="Sprite" parent="Area2D2"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 6 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 600, 307 )
script = ExtResource( 2 )

[node name="delaysound" type="Timer" parent="Area2D3"]
wait_time = 0.2
one_shot = true

[node name="collectibleSound" type="AudioStreamPlayer" parent="Area2D3"]
stream = ExtResource( 8 )

[node name="Orange" type="Sprite" parent="Area2D3"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 6 )

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2( 984, 229 )
script = ExtResource( 2 )

[node name="delaysound" type="Timer" parent="Area2D4"]
wait_time = 0.2
one_shot = true

[node name="collectibleSound" type="AudioStreamPlayer" parent="Area2D4"]
stream = ExtResource( 8 )

[node name="Orange" type="Sprite" parent="Area2D4"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
shape = SubResource( 6 )

[connection signal="body_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Area2D/delaysound" to="Area2D" method="_on_delaysound_timeout"]
[connection signal="body_entered" from="Area2D2" to="Area2D2" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Area2D2/delaysound" to="Area2D" method="_on_delaysound_timeout"]
[connection signal="body_entered" from="Area2D3" to="Area2D3" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Area2D3/delaysound" to="Area2D" method="_on_delaysound_timeout"]
[connection signal="body_entered" from="Area2D4" to="Area2D4" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Area2D4/delaysound" to="Area2D" method="_on_delaysound_timeout"]
